# llm-retry-proxy

./: .gitignore  CONTEXT.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  README.zh-CN.md  config.example.toml
.github/workflows/: ci.yml
docs/adr/: 0001-pure-retry-proxy.md  0002-client-disconnect-as-primary-abort-signal.md  0003-no-retry-after-stream-starts.md  0004-model-level-routing.md  0005-proxy-scope-evolution.md
services/: llm-proxy.plist  llm-proxy.service  llm-retry-proxy.plist
src/: config.rs  health.rs  lib.rs  log.rs  main.rs  metrics.rs  proxy.rs  retry.rs  server.rs  transform.rs
systemd/: llm-retry-proxy.plist  llm-retry-proxy.service
tests/: integration.rs
