[package]
name = "llm-proxy-rs"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Thin local proxy for LLM APIs with automatic retry, protocol transform, and model-level routing"
repository = "https://github.com/imroc/llm-proxy"
keywords = ["proxy", "retry", "llm", "openai", "transform"]
categories = ["network-programming", "web-programming"]

[lib]
name = "llm_proxy"
path = "src/lib.rs"

[[bin]]
name = "llm-proxy"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "time", "io-util", "sync"] }
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["server", "http1", "tokio"] }
http-body-util = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "http2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
notify = "6"
arc-swap = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "fmt"] }
prometheus = "0.13"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
bytes = "1"
http = "1"
futures = "0.3"
tokio-util = "0.7"
tokio-stream = "0.1"
httpdate = "1"
uuid = { version = "1", features = ["v4"] }

[profile.release]
opt-level = 3
lto = true
strip = true
